--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -76,7 +76,7 @@
                     <a class="<%= path === '/listMatch' ? 'active' : '' %>" href="/listMatch">All Matches</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a class="<%= path === '/listUser' ? 'active' : '' %>" href="/listUser">Tutte le partite</a>
+                    <a class="<%= path === '/listUser' ? 'active' : '' %>" href="/listUser">Tutte gli Utenti</a>
                 </li>
             <% } %>
         <% } %>
